# sneerkell

./: .travis.yml  README.md  sneerkell.cabal  todo.org
main/: Main.hs
src/: Main.hs
src/Data/: Transit.hs
src/Data/Transit/: Cache.hs  Parser.hs  Value.hs
src/Network/: UdpMessenger.hs
src/Sneer/: Client.hs  Keys.hs  Protocol.hs  Transit.hs
test/: Spec.hs  Timeout.hs
test/Data/: TransitSpec.hs
test/Data/Transit/: CacheSpec.hs
test/Sneer/: ClientSpec.hs  ProtocolSpec.hs  TransitSpec.hs
