name:               sneerkell
version:            0.1.0.0
synopsis:           The Sneer in Haskell Experiment
homepage:           http://github.com/bamboo/sneerkell
license:            LGPL-3
license-file:       LICENSE
author:             Rodrigo B. de Oliveira
maintainer:         rbo@acm.org
category:           Network
build-type:         Simple
extra-source-files: README.md
cabal-version:      >=1.10

library
  default-language: Haskell2010
  ghc-options:      -Wall -fno-warn-orphans
  hs-source-dirs:   src
  exposed-modules:  Sneer.Transit
  build-depends:    base >= 4
                  , haskoin
                  , bytestring
                  , aeson
                  , text
                  , vector

executable sneerkell
  default-language: Haskell2010
  other-extensions: GADTs, TypeSynonymInstances, FlexibleInstances, OverloadedStrings
  build-depends:    base >= 4
                  , network
                  , haskoin
                  , bytestring
                  , aeson
                  , text
                  , vector
  ghc-options:      -Wall -fno-warn-orphans
  hs-source-dirs:   src
  main-is:          Main.hs

test-suite spec
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Spec.hs
  build-depends:    base >= 4
                  , sneerkell
                  , hspec >= 1.3

source-repository head
  type:     git
  location: http://github.com/bamboo/sneerkell
