name:               sneerkell
version:            0.1.0.0
synopsis:           The Sneer in Haskell Experiment
homepage:           http://github.com/bamboo/sneerkell
license:            LGPL-3
license-file:       LICENSE
author:             Rodrigo B. de Oliveira
maintainer:         rbo@acm.org
category:           Network
build-type:         Simple
extra-source-files: README.md
cabal-version:      >=1.10

library
  default-language: Haskell2010
  ghc-options:      -Wall -Werror -fno-warn-orphans
  hs-source-dirs:   src
  exposed-modules:  Sneer.Transit
  build-depends:    base >= 4
                  , Sneer.Client
                  , haskoin
                  , network
                  , bytestring
                  , text
                  , aeson
                  , scientific
                  , vector

executable sneerkell
  default-language: Haskell2010
  other-extensions: GADTs, TypeSynonymInstances, FlexibleInstances, OverloadedStrings
  ghc-options:      -Wall -fno-warn-orphans -threaded
  hs-source-dirs:   main
  main-is:          Main.hs
                  , network
                  , haskoin
                  , text
                  , sneerkell

test-suite spec
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -debug
  hs-source-dirs:   test
  main-is:          Spec.hs
  build-depends:    base >= 4
                  , sneerkell
                  , network
                  , process
                  , directory
                  , filepath
                  , async
                  , hspec >= 1.3

test-suite hlint
  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  type:             exitcode-stdio-1.0
  build-depends:    base, hlint == 1.9.*
  hs-source-dirs:   test
  main-is:          HLint.hs

source-repository head
  type:     git
  location: http://github.com/bamboo/sneerkell
