name:               sneerkell
version:            0.1.0.0
synopsis:           The Sneer in Haskell Experiment
description:        Implementation of the Sneer platform in Haskell targeting the desktop.
homepage:           http://github.com/bamboo/sneerkell
license:            LGPL-3
license-file:       LICENSE
author:             Rodrigo B. de Oliveira
maintainer:         rbo@acm.org
category:           Network
build-type:         Simple
extra-source-files: README.md
cabal-version:      >=1.10

library
  default-language: Haskell2010
  ghc-options:      -Wall -rtsopts
  hs-source-dirs:   src
  exposed-modules:  Sneer.Client
                  , Sneer.Keys
                  , Network.UdpMessenger
                  , Sneer.Protocol
                  , Data.Transit
  build-depends:    aeson
                  , async
                  , base >= 4 && < 5
                  , bytestring
                  , haskoin
                  , network
                  , scientific
                  , stm >= 2.4.2
                  , system-fileio
                  , system-filepath
                  , text
                  , vector

executable sneerkell
  default-language: Haskell2010
  other-extensions: GADTs, TypeSynonymInstances, FlexibleInstances, OverloadedStrings
  ghc-options:      -Wall -threaded
  hs-source-dirs:   main
  main-is:          Main.hs
  build-depends:    base >= 4 && < 5
                  , network
                  , haskoin
                  , sneerkell

test-suite spec
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -debug
  hs-source-dirs:   test
  main-is:          Spec.hs
  build-depends:    aeson
                  , async
                  , base >= 4 && < 5
                  , hspec >= 1.3
                  , smallcheck
                  , hspec-smallcheck
                  , network
                  , sneerkell
                  , stm >= 2.4.2

test-suite hlint
  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  type:             exitcode-stdio-1.0
  build-depends:    base >= 4 && < 5
                  , hlint == 1.9.*
  hs-source-dirs:   test
  main-is:          HLint.hs

source-repository head
  type:     git
  location: http://github.com/bamboo/sneerkell
